2000-04-18  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10812: Completion/Core/_path_files: fix completion after ~<num>
	
2000-04-18  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 10808: Completion/Core/compinstall: handle list-prompt.

	* 10802: Doc/Zsh/mod_complist.yo: typo

2000-04-18  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10807: Completion/Base/_value: change suffix added when
 	completing an assigned value
	
	* 10801: Completion/Builtins/_zstyle, Completion/Core/_main_complete,
 	Doc/Zsh/compsys.yo, Doc/Zsh/compwid.yo, Doc/Zsh/mod_complist.yo,
 	Src/Zle/complist.c: completion list scrolling cleanup; *STATUS
 	renamed to *PROMPT, styles for new used parameters, use local
 	keymap when waiting at list-prompt
	
	* 10799: Src/text.c: fix to get newlines in non-job-texts (I'm
 	sooo stupid)
	
	* 10798: Src/Zle/compmatch.c: join_clines() tested the wrong
 	variable
	
2000-04-17  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 10789: Doc/Zsh/expn.yo: better documentation for <(...) and
	>(...) implementations and their drawbacks.

	* Chmouel: 10772: Completion/Linux/_rpm:  --target support.

2000-04-17  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10795: Functions/Misc/zstyle+: simplify definiton of styles

	* 10790: Doc/Zsh/mod_complist.yo, Src/params.c, Src/Zle/compcore.c,
 	Src/Zle/complete.c, Src/Zle/complist.c, Src/Zle/compresult.c,
 	Src/Zle/zle_tricky.c, Src/Zle/zle_utils.c: scrolling in completion
 	lists and menu-selection, version1
	
	* 10788: Src/text.c: display newlines as spaces in job-texts
	
	* 10782: Src/Zle/computil.c: fix for exclusion lists for -+o
 	specifications
	
	* 10780: Completion/Base/_default, Completion/Base/_value,
 	Completion/Builtins/_vars_eq, Completion/Builtins/_zstyle,
 	Doc/Zsh/compsys.yo: better completion after `=', everywhere
	
	* 10775: Completion/Core/_description, Completion/Core/_path_files,
 	Completion/Core/_tags, Src/Zle/computil.c: make _tags use C-code